# Intermediate-Representation-Code-Optimizations-in-OCaml

./: .gitignore  README.md
bril-ocaml/: .gitignore
bril-ocaml/lib/: block_graph.ml  block_name.ml  bril_type.ml  chordal_graph.ml  common.ml  const.ml  def_use_map.ml  dest.ml  dune  exercise.ml  func_arg.ml  func_arg.mli  graph.ml  graphviz.ml  graphviz.mli  graphviz_test.ml  instr.mli  instruction_location_map.ml  json_repr.ml  label.ml  liveness_analysis.ml  liveness_map.ml  local_optimization.ml  location.ml  loop.ml  loop_optimization.ml  micro_worklist.ml  multi_map_set.ml  multi_map_set.mli  multi_map_set_intf.ml  natural_loop.ml  node.ml  node_traverser.ml  node_traverser.mli  node_traverser_intf.ml  op.ml  op.mli  primitive_type.ml  priority_hash_map.ml  program.ml  (+16 more)
bril-ocaml/yojson_enum_ppx/: dune  yojson_enum_ppx.ml
test/worklist/: reaching_def.bril
