(library
 (name bril)
 (public_name bril)
 (inline_tests)
 (libraries
  core
  yojson
  ppx_deriving_yojson.runtime
  async
  ppx_show.runtime
  ppx_inline_test.runtime-lib
  core_kernel.pairing_heap
  )
 (preprocess
  (pps
   ppx_jane
   ppx_deriving_yojson
   ppx_assert
   ppx_deriving.eq
   ppx_expect
   ppx_show)))
